Update tmux.conf with a few small tweaks
... the big switch here is going ctrl-space instead of ctrl-a. It'll be
tough at first but at least I'll have ctrl-a back as a default
"beginning of line" behavior.

* Update a few aliases (zsh and git)
* Simplify (radically) the prompt. This can be a baseline prompt until I
  have some time to customize it.

--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -1,21 +1,24 @@
-# Ansible managed: /etc/ansible/roles/trinitronx.tmux/templates/tmux.conf.j2 modified on 2015-12-17 13:44:14 by root on mini
-
-#set -g prefix `
-#unbind C-b
-#bind-key ` send-prefix
+# use C-Space as prefix. Leave C-a alone
+unbind C-b
+set -g prefix C-Space
 
 set -g default-terminal "xterm-256color"
 setw -g xterm-keys on
 
-#set -g base-index 1
-#setw -g pane-base-index 1
-bind | split-window -h
-bind - split-window -v
+# Set the base index for windows to 1 instead of 0
+set -g base-index 1
+
+# Set the base index for panes to 1 instead of 0
+setw -g pane-base-index 1
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
 setw -g monitor-activity on
+
+# Split windows with "|" and "-"
+bind | split-window -h
+bind - split-window -v
 
 # Stay in the same directory when split panes.
 # http://qiita.com/okuramasafumi/items/72f61ec0af56b7b9b292
@@ -38,30 +41,11 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set-option -g history-limit 100000
 
 # Turn Mouse on
-setw -g mode-mouse on
-set-option -g mouse-resize-pane on
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
+setw -g mouse on
 
-# Toggle mouse on with ^B m
-bind m \
-  set -g mode-mouse on \;\
-  set -g mouse-resize-pane on \;\
-  set -g mouse-select-pane on \;\
-  set -g mouse-select-window on \;\
-  display 'Mouse: ON'
-
-# Toggle mouse off with ^B M
-bind M \
-  set -g mode-mouse off \;\
-  set -g mouse-resize-pane off \;\
-  set -g mouse-select-pane off \;\
-  set -g mouse-select-window off \;\
-  display 'Mouse: OFF'
-
+# Toggle synchronization of all panes to receive the same input
 bind e setw synchronize-panes
 
-bind r source-file ~/.tmux.conf \; display "reloaded tmux.conf"
 # Reload config
+bind r source-file ~/.tmux.conf \; display "reloaded tmux.conf"
 bind-key C-r source ~/.tmux.conf \; display "reloaded tmux.conf"
-
