Set titles on for tmux

--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -57,6 +57,9 @@ setw -g mouse on
 # Toggle synchronization of all panes to receive the same input
 bind e setw synchronize-panes
 
+# turn window titles on
+set-option -g set-titles on
+
 # Reload config
 bind r source-file ~/.tmux.conf \; display "reloaded tmux.conf"
 bind-key C-r source ~/.tmux.conf \; display "reloaded tmux.conf"
