[JRO] tmux + neovim have weird issues w/esc key
Setting tmux to ignore the escape key fixes these issues. See:

https://github.com/neovim/neovim/issues/2035

For more info. Specifically:

https://github.com/neovim/neovim/issues/2035#issuecomment-75380462

--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -63,3 +63,6 @@ set-option -g set-titles on
 # Reload config
 bind r source-file ~/.tmux.conf \; display "reloaded tmux.conf"
 bind-key C-r source ~/.tmux.conf \; display "reloaded tmux.conf"
+
+# Ignore esc
+set -g escape-time 0
