Initial tmux customization
* fix the prefix, space wasn't working.
* start with a theme found here: https://www.reddit.com/r/unixporn/comments/53nde4/tmuxvim_blue_dragon_flames_airline_status/
  no flames, but close enough, and matching colors from jellybeans

--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -1,3 +1,5 @@
+# --- Config
+#
 # Smart pane switching with awareness of Vim splits. - Thanks CHRIS TOOMEY!
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -12,8 +14,8 @@ bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 # use C-Space as prefix. Leave C-a alone
 unbind C-b
 set -g prefix C-Space
+bind Space send-prefix
 
-set -g default-terminal "xterm-256color"
 setw -g xterm-keys on
 
 # Set the base index for windows to 1 instead of 0
@@ -64,5 +66,54 @@ set-option -g set-titles on
 bind r source-file ~/.tmux.conf \; display "reloaded tmux.conf"
 bind-key C-r source ~/.tmux.conf \; display "reloaded tmux.conf"
 
-# Ignore esc
+# Ignore esc and fix working with NeoVim
 set -g escape-time 0
+
+# --- Theme
+set -g default-terminal "xterm-256color"
+set -g message-bg "colour234"
+set -g message-command-bg "colour234"
+set -g message-command-fg "colour7"
+set -g message-fg "colour7"
+set -g pane-active-border-bg colour234
+set -g pane-active-border-fg "colour103"
+set -g pane-border-bg colour234
+set -g pane-border-fg "colour234"
+set -g status "on"
+set -g status-attr "none"
+set -g status-bg "colour8"
+set -g status-fg colour8
+set -g status-justify "left"
+set -g status-left "#[fg=colour8,bg=colour103]  #[fg=colour103,bg=colour8,nobold,nounderscore,noitalics]⮀ "
+set -g status-left-attr "none"
+set -g status-left-length "100"
+set -g status-right "#[fg=colour234,bg=colour8,nobold,nounderscore,noitalics] ⮂#[fg=colour8,bg=colour234,nobold,nounderscore,noitalics] ⮂#[fg=colour103,bg=colour8,nobold,nounderscore,noitalics] ⮂#[fg=colour234,bg=colour103] #h "
+set -g status-right-attr "none"
+set -g status-right-length "100"
+set -g visual-activity off
+set-option -g bell-action none
+
+setw -g clock-mode-colour colour11
+setw -g mode-attr bold
+setw -g mode-bg colour11
+setw -g mode-fg default
+setw -g mode-keys vi
+setw -g monitor-activity on
+setw -g window-status-activity-attr "none"
+setw -g window-status-activity-bg "colour8"
+setw -g window-status-activity-fg "colour103"
+setw -g window-status-attr "none"
+setw -g window-status-bell-attr bold
+setw -g window-status-bell-bg colour9
+setw -g window-status-bell-fg default
+setw -g window-status-bg "colour236"
+setw -g window-status-current-attr dim
+setw -g window-status-current-bg colour117
+setw -g window-status-current-fg default
+setw -g window-status-current-format "#[fg=colour8,bg=colour234,nobold,nounderscore,noitalics]⮀ #[fg=colour103,bg=colour234]#W #[fg=colour234,bg=colour8,nobold,nounderscore,noitalics]⮀ "
+setw -g window-status-fg "colour103"
+setw -g window-status-format "#[fg=colour234,bg=colour8]#I:#W#F "
+setw -g window-status-last-attr dim
+setw -g window-status-last-bg colour4
+setw -g window-status-last-fg default
+setw -g window-status-separator ""
