Update status-right to include date and time

--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -87,7 +87,7 @@ set -g status-justify "left"
 set -g status-left "#[fg=colour8,bg=colour103]  #[fg=colour103,bg=colour8,nobold,nounderscore,noitalics]⮀ "
 set -g status-left-attr "none"
 set -g status-left-length "100"
-set -g status-right "#[fg=colour234,bg=colour8,nobold,nounderscore,noitalics] ⮂#[fg=colour8,bg=colour234,nobold,nounderscore,noitalics] ⮂#[fg=colour103,bg=colour8,nobold,nounderscore,noitalics] ⮂#[fg=colour234,bg=colour103] #h "
+set -g status-right "#[fg=colour234,bg=colour8,nobold,nounderscore,noitalics] ⮂#[fg=colour8,bg=colour234,nobold,nounderscore,noitalics] ⮂#[fg=colour234,bg=colour8,nobold,nounderscore,noitalics] #(date '+%h %d')#[fg=colour103,bg=colour8,nobold,nounderscore,noitalics] ⮂#[fg=colour234,bg=colour103] #(date '+%r') "
 set -g status-right-attr "none"
 set -g status-right-length "100"
 set -g visual-activity off
