Change colors of tmux's window/session selector

--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -117,3 +117,6 @@ setw -g window-status-last-attr dim
 setw -g window-status-last-bg colour4
 setw -g window-status-last-fg default
 setw -g window-status-separator ""
+
+# set colors in the session/window selector
+set -wg mode-style bg=colour103,fg=black
