--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -33,6 +33,10 @@ setw -g monitor-activity on
 bind | split-window -h
 bind - split-window -v
 
+# Change "list/choose sessions" to j
+unbind j
+bind j choose-tree
+
 # Stay in the same directory when split panes.
 # http://qiita.com/okuramasafumi/items/72f61ec0af56b7b9b292
 unbind %
