In addition to j, add ctrl-j as a bind key for choose-tree

--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -36,6 +36,7 @@ bind - split-window -v
 # Change "list/choose sessions" to j
 unbind j
 bind j choose-tree
+bind C-j choose-tree
 
 # Stay in the same directory when split panes.
 # http://qiita.com/okuramasafumi/items/72f61ec0af56b7b9b292
