Quickly rotate window splits

--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -33,6 +33,10 @@ setw -g monitor-activity on
 bind | split-window -h
 bind - split-window -v
 
+# Rotate windows ...
+bind h select-layout even-horizontal
+bind v select-layout even-vertical
+
 # Change "list/choose sessions" to j
 unbind j
 bind j choose-tree
