--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -50,12 +50,12 @@ unbind '"'
 bind-key '"' split-window -v -c "#{pane_current_path}"
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Sane scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -79,7 +79,7 @@ bind-key C-r source ~/.tmux.conf \; display "reloaded tmux.conf"
 set -g escape-time 0
 
 # --- Theme
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 set -g message-bg "colour234"
 set -g message-command-bg "colour234"
 set -g message-command-fg "colour7"
