--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -11,6 +11,21 @@ bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
+
+# Attach the shell to the user namespace
+
+# This allows us to launch a process and have that process be attached to the
+# per-user bootstrap namespace, which, to put it simply, makes the program
+# behave as we are expecting.
+#
+# The “trick” is to configure tmux to launch its shells with the
+# reattach-to-user-namespace wrapper. By doing that, the shells tmux launches,
+# as well as everything those shells launch, will be attached to the user
+# namespace
+#
+# see: http://www.economyofeffort.com/2013/07/29/reattach-to-user-namespace-the-fix-for-your-tmux-in-os-x-woes/
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # use C-Space as prefix. Leave C-a alone
 unbind C-b
 set -g prefix C-Space
@@ -39,8 +54,8 @@ bind v select-layout even-vertical
 
 # Change "list/choose sessions" to j
 unbind j
-bind j choose-tree
-bind C-j choose-tree
+bind j choose-tree -s
+bind C-j choose-tree -s
 
 # Stay in the same directory when split panes.
 # http://qiita.com/okuramasafumi/items/72f61ec0af56b7b9b292
