--- a/tag-nvim/config/nvim/coc-settings.json
+++ b/tag-nvim/config/nvim/coc-settings.json
@@ -1,6 +1,32 @@
 {
   "codeLens.enable": true,
   "solargraph.useBundler": true,
-  "snippets.userSnippetsDirectory": "~/.dotfiles/tag-nvim/config/nvim/UltiSnips",
-  "snippets.ultisnips.directories": ["~/.dotfiles/tag-nvim/config/nvim/UltiSnips"]
+  "snippets.ultisnips.directories": ["~/.dotfiles/tag-nvim/config/nvim/UltiSnips"],
+  "tailwindCSS.htmlLanguages": [
+    "blade",
+    "edge",
+    "eelixir",
+    "ejs",
+    "elixir",
+    "erb",
+    "eruby",
+    "haml",
+    "handlebars",
+    "html",
+    "HTML (EEx)",
+    "HTML (Eex)",
+    "html.eruby",
+    "html.twig",
+    "jade",
+    "leaf",
+    "markdown",
+    "njk",
+    "nunjucks",
+    "php",
+    "razor",
+    "slim",
+    "svelte",
+    "twig",
+    "vue"
+  ]
 }
