Support setting up on a linux machine
`./setup` didn't work so well on a fresh ubuntu install :shrug:

--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -11,21 +11,6 @@ bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-
-# Attach the shell to the user namespace
-
-# This allows us to launch a process and have that process be attached to the
-# per-user bootstrap namespace, which, to put it simply, makes the program
-# behave as we are expecting.
-#
-# The “trick” is to configure tmux to launch its shells with the
-# reattach-to-user-namespace wrapper. By doing that, the shells tmux launches,
-# as well as everything those shells launch, will be attached to the user
-# namespace
-#
-# see: http://www.economyofeffort.com/2013/07/29/reattach-to-user-namespace-the-fix-for-your-tmux-in-os-x-woes/
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-
 # use C-Space as prefix. Leave C-a alone
 unbind C-b
 set -g prefix C-Space
@@ -95,52 +80,36 @@ set -g escape-time 0
 
 # --- Theme
 set -g default-terminal "screen-256color"
-set -g message-bg "colour234"
-set -g message-command-bg "colour234"
-set -g message-command-fg "colour7"
-set -g message-fg "colour7"
-set -g pane-active-border-bg colour234
-set -g pane-active-border-fg "colour103"
-set -g pane-border-bg colour234
-set -g pane-border-fg "colour234"
+set -g message-command-style bg="colour234",fg="colour7"
+set -g message-style bg="colour234",fg="colour7"
+set -g pane-active-border-style bg=colour234,fg="colour103"
+set -g pane-border-style bg=colour234,fg="colour234"
 set -g status "on"
-set -g status-attr "none"
-set -g status-bg "colour8"
-set -g status-fg colour8
+set -g status-style "none",bg="colour8",fg=colour8
 set -g status-justify "left"
 set -g status-left "#[fg=colour8,bg=colour103]  #[fg=colour103,bg=colour8,nobold,nounderscore,noitalics]⮀ "
-set -g status-left-attr "none"
+set -g status-left-style "none"
 set -g status-left-length "100"
 set -g status-right "#[fg=colour234,bg=colour8,nobold,nounderscore,noitalics] ⮂#[fg=colour8,bg=colour234,nobold,nounderscore,noitalics] ⮂#[fg=colour234,bg=colour8,nobold,nounderscore,noitalics] #(date '+%h %d')#[fg=colour103,bg=colour8,nobold,nounderscore,noitalics] ⮂#[fg=colour234,bg=colour103] #(date '+%r') "
-set -g status-right-attr "none"
+set -g status-right-style "none"
 set -g status-right-length "100"
 set -g visual-activity off
 set-option -g bell-action none
 
 setw -g clock-mode-colour colour11
-setw -g mode-attr bold
-setw -g mode-bg colour11
-setw -g mode-fg default
+setw -g mode-style bold,bg=colour11,fg=default
 setw -g mode-keys vi
 setw -g monitor-activity on
-setw -g window-status-activity-attr "none"
-setw -g window-status-activity-bg "colour8"
-setw -g window-status-activity-fg "colour103"
-setw -g window-status-attr "none"
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-bg colour9
-setw -g window-status-bell-fg default
-setw -g window-status-bg "colour236"
-setw -g window-status-current-attr dim
-setw -g window-status-current-bg colour117
-setw -g window-status-current-fg default
+setw -g window-status-activity-style "none",bg="colour8",fg="colour103"
+setw -g window-status-bell-style bold,bg=colour9,fg=default
+setw -g window-status-current-style dim,bg=colour117,fg=default
 setw -g window-status-current-format "#[fg=colour8,bg=colour234,nobold,nounderscore,noitalics]⮀ #[fg=colour103,bg=colour234]#W #[fg=colour234,bg=colour8,nobold,nounderscore,noitalics]⮀ "
-setw -g window-status-fg "colour103"
+setw -g window-status-style "none",bg="colour236",fg="colour103"
 setw -g window-status-format "#[fg=colour234,bg=colour8]#I:#W#F "
-setw -g window-status-last-attr dim
-setw -g window-status-last-bg colour4
-setw -g window-status-last-fg default
+setw -g window-status-last-style dim,bg=colour4,fg=default
 setw -g window-status-separator ""
 
 # set colors in the session/window selector
 set -wg mode-style bg=colour103,fg=black
+
+if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
