--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -37,10 +37,17 @@ bind - split-window -v
 bind h select-layout even-horizontal
 bind v select-layout even-vertical
 
+# Resize the current pane using Alt + direction
+bind j resize-pane -D 5
+bind k resize-pane -U 5
+bind l resize-pane -L 5
+bind h resize-pane -R 5
+
+
 # Change "list/choose sessions" to j
-unbind j
-bind j choose-tree -s
-bind C-j choose-tree -s
+unbind m
+bind m choose-tree -s
+bind C-m choose-tree -s
 
 # Stay in the same directory when split panes.
 # http://qiita.com/okuramasafumi/items/72f61ec0af56b7b9b292
