Update vim. coc, autocmd, etc

--- a/tag-nvim/config/nvim/coc-settings.json
+++ b/tag-nvim/config/nvim/coc-settings.json
@@ -1,5 +1,5 @@
 {
-  "codeLens.enable": true,
+  "codeLens.enable": false,
   "solargraph.useBundler": true,
   "snippets.ultisnips.directories": ["~/.dotfiles/tag-nvim/config/nvim/UltiSnips"],
   "tailwindCSS.htmlLanguages": [
