--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -86,7 +86,7 @@ bind-key C-r source ~/.tmux.conf \; display "reloaded tmux.conf"
 set -g escape-time 0
 
 # --- Theme
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color-italic"
 set -g message-command-style bg="colour234",fg="colour7"
 set -g message-style bg="colour234",fg="colour7"
 set -g pane-active-border-style bg=colour234,fg="colour103"
