--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -5,11 +5,11 @@
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -n 'C-h' if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n 'C-j' if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n 'C-k' if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n 'C-l' if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n 'C-\' if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # use C-Space as prefix. Leave C-a alone
 unbind C-b
@@ -94,10 +94,10 @@ set -g pane-border-style bg=colour234,fg="colour234"
 set -g status "on"
 set -g status-style "none",bg="colour8",fg=colour8
 set -g status-justify "left"
-set -g status-left "#[fg=colour8,bg=colour103]  #[fg=colour103,bg=colour8,nobold,nounderscore,noitalics]⮀ "
+set -g status-left "#[fg=colour8,bg=colour103]  #[fg=colour103,bg=colour8,nobold,nounderscore,noitalics]"
 set -g status-left-style "none"
 set -g status-left-length "100"
-set -g status-right "#[fg=colour234,bg=colour8,nobold,nounderscore,noitalics] ⮂#[fg=colour8,bg=colour234,nobold,nounderscore,noitalics] ⮂#[fg=colour234,bg=colour8,nobold,nounderscore,noitalics] #(date '+%h %d')#[fg=colour103,bg=colour8,nobold,nounderscore,noitalics] ⮂#[fg=colour234,bg=colour103] #(date '+%r') "
+set -g status-right "#[fg=colour234,bg=colour8,nobold,nounderscore,noitalics] #[fg=colour8,bg=colour234,nobold,nounderscore,noitalics] #[fg=colour234,bg=colour8,nobold,nounderscore,noitalics] #(date '+%h %d')#[fg=colour103,bg=colour8,nobold,nounderscore,noitalics] #[fg=colour234,bg=colour103] #(date '+%r') "
 set -g status-right-style "none"
 set -g status-right-length "100"
 set -g visual-activity off
@@ -110,7 +110,7 @@ setw -g monitor-activity on
 setw -g window-status-activity-style "none",bg="colour8",fg="colour103"
 setw -g window-status-bell-style bold,bg=colour9,fg=default
 setw -g window-status-current-style dim,bg=colour117,fg=default
-setw -g window-status-current-format "#[fg=colour8,bg=colour234,nobold,nounderscore,noitalics]⮀ #[fg=colour103,bg=colour234]#W #[fg=colour234,bg=colour8,nobold,nounderscore,noitalics]⮀ "
+setw -g window-status-current-format "#[fg=colour8,bg=colour234,nobold,nounderscore,noitalics] #[fg=colour103,bg=colour234]#W #[fg=colour234,bg=colour8,nobold,nounderscore,noitalics] "
 setw -g window-status-style "none",bg="colour236",fg="colour103"
 setw -g window-status-format "#[fg=colour234,bg=colour8]#I:#W#F "
 setw -g window-status-last-style dim,bg=colour4,fg=default
