Do not reorder tailwind classes on save
Apologies to my co-workers who have dealt with unintentially complicated diffs as a result 😅

--- a/tag-nvim/config/nvim/coc-settings.json
+++ b/tag-nvim/config/nvim/coc-settings.json
@@ -2,6 +2,7 @@
   "codeLens.enable": false,
   "solargraph.useBundler": true,
   "snippets.ultisnips.directories": ["~/.dotfiles/tag-nvim/config/nvim/UltiSnips"],
+  "tailwindCSS.headwind.runOnSave": false,
   "tailwindCSS.htmlLanguages": [
     "blade",
     "edge",
