--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -64,6 +64,8 @@ bind-key -T copy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
 unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
+set-option -g focus-events on
+
 # Sane scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 # Larger scrollback buffer
