Try solarized light theme for a little bit

--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -1,5 +1,9 @@
 # --- Config
-#
+
+set -g default-terminal "xterm-256color"
+# tell Tmux that outside terminal supports true color
+set -ga terminal-overrides ",xterm-256color*:Tc"
+
 # Smart pane switching with awareness of Vim splits. - Thanks CHRIS TOOMEY!
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -42,7 +46,6 @@ bind j resize-pane -D 5
 bind k resize-pane -U 5
 bind l resize-pane -L 5
 bind h resize-pane -R 5
-
 
 # Change "list/choose sessions" to j
 unbind m
@@ -87,38 +90,37 @@ bind-key C-r source ~/.tmux.conf \; display "reloaded tmux.conf"
 # Ignore esc and fix working with NeoVim
 set -g escape-time 0
 
-# --- Theme
-set -g default-terminal "xterm-256color-italic"
-set -g message-command-style bg="colour234",fg="colour7"
-set -g message-style bg="colour234",fg="colour7"
-set -g pane-active-border-style bg=colour234,fg="colour103"
-set -g pane-border-style bg=colour234,fg="colour234"
-set -g status "on"
-set -g status-style "none",bg="colour8",fg=colour8
-set -g status-justify "left"
-set -g status-left "#[fg=colour8,bg=colour103]  #[fg=colour103,bg=colour8,nobold,nounderscore,noitalics]"
-set -g status-left-style "none"
-set -g status-left-length "100"
-set -g status-right "#[fg=colour234,bg=colour8,nobold,nounderscore,noitalics] #[fg=colour8,bg=colour234,nobold,nounderscore,noitalics] #[fg=colour234,bg=colour8,nobold,nounderscore,noitalics] #(date '+%h %d')#[fg=colour103,bg=colour8,nobold,nounderscore,noitalics] #[fg=colour234,bg=colour103] #(date '+%r') "
-set -g status-right-style "none"
-set -g status-right-length "100"
-set -g visual-activity off
-set-option -g bell-action none
-
-setw -g clock-mode-colour colour11
-setw -g mode-style bold,bg=colour11,fg=default
-setw -g mode-keys vi
-setw -g monitor-activity on
-setw -g window-status-activity-style "none",bg="colour8",fg="colour103"
-setw -g window-status-bell-style bold,bg=colour9,fg=default
-setw -g window-status-current-style dim,bg=colour117,fg=default
-setw -g window-status-current-format "#[fg=colour8,bg=colour234,nobold,nounderscore,noitalics] #[fg=colour103,bg=colour234]#W #[fg=colour234,bg=colour8,nobold,nounderscore,noitalics] "
-setw -g window-status-style "none",bg="colour236",fg="colour103"
-setw -g window-status-format "#[fg=colour234,bg=colour8]#I:#W#F "
-setw -g window-status-last-style dim,bg=colour4,fg=default
-setw -g window-status-separator ""
-
-# set colors in the session/window selector
-set -wg mode-style bg=colour103,fg=black
-
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
+
+#### COLOUR (Solarized 256)
+
+# default statusbar colors
+set-option -g status-style fg=colour136,bg=colour235 #yellow and base02
+
+# default window title colors
+set-window-option -g window-status-style fg=colour244,bg=default #base0 and default
+#set-window-option -g window-status-style dim
+
+# active window title colors
+set-window-option -g window-status-current-style fg=colour166,bg=default #orange and default
+#set-window-option -g window-status-current-style bright
+
+# pane border
+set-option -g pane-border-style fg=colour235 #base02
+set-option -g pane-active-border-style fg=colour240 #base01
+
+# message text
+set-option -g message-style fg=colour166,bg=colour235 #orange and base02
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+# bell
+set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, reloaded
+
+# Load colors
+source-file ~/.tmux-colors.conf
