Copilot and LSP updates
Remove some old stuff as well

--- a/tag-tmux/tmux.conf
+++ b/tag-tmux/tmux.conf
@@ -1,8 +1,9 @@
 # --- Config
+set -g default-terminal "tmux-256color"
 
-set -g default-terminal "xterm-256color"
 # tell Tmux that outside terminal supports true color
-set -ga terminal-overrides ",xterm-256color*:Tc"
+# set-option -ga terminal-overrides ',tmux-256color:Tc'
+set-option -sa terminal-overrides ',tmux-256color:RGB'
 
 # Smart pane switching with awareness of Vim splits. - Thanks CHRIS TOOMEY!
 # See: https://github.com/christoomey/vim-tmux-navigator
