--- a/tag-tmux/tmux-colors.conf
+++ b/tag-tmux/tmux-colors.conf
@@ -1,21 +1,28 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Fri, 01 Jul 2022
+# on Sat, 19 Aug 2023
 
 set -g status-justify "left"
 set -g status "on"
-set -g status-left-style "none"
-set -g message-command-style "fg=#fdf6e3,bg=#839496"
-set -g status-right-style "none"
-set -g pane-active-border-style "fg=#d33682"
-set -g status-style "none,bg=#eee8d5"
-set -g message-style "fg=#fdf6e3,bg=#839496"
-set -g pane-border-style "fg=#839496"
-set -g status-right-length "100"
+set -g status-attr "none"
+set -g message-command-bg "colour61"
 set -g status-left-length "100"
-setw -g window-status-activity-style "none"
+set -g pane-active-border-fg "colour141"
+set -g status-bg "colour236"
+set -g message-command-fg "colour15"
+set -g pane-border-fg "colour61"
+set -g message-bg "colour61"
+set -g status-left-attr "none"
+set -g status-right-attr "none"
+set -g status-right-length "100"
+set -g message-fg "colour15"
+setw -g window-status-fg "colour15"
+setw -g window-status-attr "none"
+setw -g window-status-activity-bg "colour236"
+setw -g window-status-activity-attr "none"
+setw -g window-status-activity-fg "colour141"
 setw -g window-status-separator ""
-setw -g window-status-style "none,fg=#586e75,bg=#eee8d5"
-set -g status-left "#[fg=#fdf6e3,bg=#d33682] #S #[fg=#d33682,bg=#eee8d5,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#839496,bg=#eee8d5,nobold,nounderscore,noitalics]#[fg=#fdf6e3,bg=#839496] %Y-%m-%d  %H:%M #[fg=#586e75,bg=#839496,nobold,nounderscore,noitalics]#[fg=#fdf6e3,bg=#586e75] #h "
-setw -g window-status-format "#[fg=#586e75,bg=#eee8d5] #I #[fg=#586e75,bg=#eee8d5] #W "
-setw -g window-status-current-format "#[fg=#eee8d5,bg=#839496,nobold,nounderscore,noitalics]#[fg=#fdf6e3,bg=#839496] #I #[fg=#fdf6e3,bg=#839496] #W #[fg=#839496,bg=#eee8d5,nobold,nounderscore,noitalics]"
+setw -g window-status-bg "colour236"
+set -g status-left "#[fg=colour16,bg=colour141] #S #[fg=colour141,bg=colour236,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour61,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour61] %Y-%m-%d  %H:%M #[fg=colour141,bg=colour61,nobold,nounderscore,noitalics]#[fg=colour16,bg=colour141] #h "
+setw -g window-status-format "#[fg=colour15,bg=colour236] #I #[fg=colour15,bg=colour236] #W "
+setw -g window-status-current-format "#[fg=colour236,bg=colour61,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour61] #I #[fg=colour15,bg=colour61] #W #[fg=colour61,bg=colour236,nobold,nounderscore,noitalics]"
