--- a/tag-tmux/tmux-colors.conf
+++ b/tag-tmux/tmux-colors.conf
@@ -1,27 +1,21 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Sat, 19 Aug 2023
+# on Sar, 19 Jul 2022
 
 set -g status-justify "left"
 set -g status "on"
-set -g status-attr "none"
-set -g message-command-bg "colour61"
+set -g status-style "none"
+set -g message-command-style fg="colour15",bg="colour61"
 set -g status-left-length "100"
-set -g pane-active-border-fg "colour141"
+set -g pane-active-border-style fg="colour141"
 set -g status-bg "colour236"
-set -g message-command-fg "colour15"
-set -g pane-border-fg "colour61"
-set -g message-bg "colour61"
-set -g status-left-attr "none"
-set -g status-right-attr "none"
+set -g pane-border-style fg="colour61"
+set -g message-style bg="colour61",fg="colour15"
+set -g status-left-style "none"
+set -g status-right-style "none"
 set -g status-right-length "100"
-set -g message-fg "colour15"
-setw -g window-status-fg "colour15"
-setw -g window-status-attr "none"
-setw -g window-status-activity-bg "colour236"
-setw -g window-status-activity-attr "none"
-setw -g window-status-activity-fg "colour141"
+setw -g window-status-style fg="colour15",bg="colour236","none"
+setw -g window-status-activity-style fg="colour141",bg="colour236","none"
 setw -g window-status-separator ""
-setw -g window-status-bg "colour236"
 set -g status-left "#[fg=colour16,bg=colour141] #S #[fg=colour141,bg=colour236,nobold,nounderscore,noitalics]"
 set -g status-right "#[fg=colour61,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour61] %Y-%m-%d  %H:%M #[fg=colour141,bg=colour61,nobold,nounderscore,noitalics]#[fg=colour16,bg=colour141] #h "
 setw -g window-status-format "#[fg=colour15,bg=colour236] #I #[fg=colour15,bg=colour236] #W "
